Refactor environment configuration and Dockerfile setup

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,17 @@ MONGODB_URI=mongodb URI
 MONGODB_DATABASE=school
 
 # Email Configuration (Gmail SMTP example)
+MAIL_MAILER=smtp
+MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=your-email@gmail.com
-MAIL_PASSWORD=your-app-password
-MAIL_FROM_ADDRESS=noreply@uhuruprimary.ke
-MAIL_FROM_NAME="your  School name "
+MAIL_USERNAME=
+MAIL_PASSWORD="your app password from google "
+#https://myaccount.google.com/apppasswords get the password from this link 
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=your email address
+MAIL_FROM_NAME="name you want to be seen as the  from address"
+
 
 # API Keys
 # Pexels is used by pexels-api.php
